<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/longitude"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="Longitude:" />

        <TextView
            android:id="@+id/latitude"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="Latitude:" />
    </LinearLayout>

    <com.google.android.maps.MapView
        android:id="@+id/mapview"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:layout_weight="2.54"
        android:apiKey="0BEaP8xjZH4xv6e-r5bTt3p1Ia0MhRUP3hl5j7w"
        android:clickable="true" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creerCompte" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rechercher" />

    </LinearLayout>

</LinearLayout>